<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/photo"
    android:fillViewport="true"
    android:scrollbars="horizontal">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_marginStart="25dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="25dp"
            android:visibility="visible"
            app:cardBackgroundColor="?attr/colorAccent"
            app:cardCornerRadius="12dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".catatan.NoteActivity">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_view"

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_row="0"
                    android:layout_rowWeight="1"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="24dp"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"

                    app:layout_constraintHorizontal_bias="0.526"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.023">

                    <EditText
                        android:id="@+id/editTextTextMultiLine"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="123dp"
                        android:layout_margin="5dp"
                        android:background="@null"
                        android:ems="10"
                        android:gravity="start|top"
                        android:hint="@string/ketik_disini"
                        android:inputType="textMultiLine"
                        android:scrollbarAlwaysDrawVerticalTrack="true"
                        android:textAllCaps="false"
                        android:textSize="12sp"
                        android:textStyle="normal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.496"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"


                        app:layout_constraintVertical_bias="0.01" />

                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/submitButton"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_marginStart="240dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="0dp"
                    android:background="@drawable/rounded"
                    android:hapticFeedbackEnabled="true"
                    android:text="@string/submitButton"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/card_view"
                    app:layout_constraintVertical_bias="0.0"


                    />


                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="368dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/submitButton"
                    app:layout_constraintVertical_bias="0.0" />

                <View
                    android:id="@+id/divider3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="1dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/card_view2"
                    app:layout_constraintVertical_bias="0.0" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_view2"

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_row="0"
                    android:layout_rowWeight="1"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.526"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/submitButton"
                    app:layout_constraintVertical_bias="0.023">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="471dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginEnd="0dp"
                        android:layout_marginBottom="0dp"
                        android:scrollbars="vertical"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/divider"
                        app:layout_constraintVertical_bias="0.0"
                        tools:listitem="@layout/list_notes" />

                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/backbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="64dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/backbutton"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider3"
                    app:layout_constraintVertical_bias="1.0" />

                <Button
                    android:id="@+id/buttoncleardata"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_marginStart="240dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/rounded"
                    android:hapticFeedbackEnabled="true"
                    android:text="@string/clear_data"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.948"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider3"
                    app:layout_constraintVertical_bias="0.0" />

                <ImageButton
                    android:id="@+id/arrowUp"
                    android:layout_width="39dp"
                    android:layout_height="26dp"
                    app:layout_constraintBottom_toTopOf="@+id/card_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/arrowDown"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
 />

                <ImageButton
                    android:id="@+id/arrowDown"
                    android:layout_width="wrap_content"
                    android:layout_height="27dp"
                    app:layout_constraintBottom_toTopOf="@+id/card_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.844"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@android:drawable/arrow_down_float" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <SearchView
            android:id="@+id/cariCatatan"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/rounded"
            app:layout_constraintBottom_toTopOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

